# python-cpp-extension

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cython_sieve.pyx  mypy.ini  requirements.txt  setup.py  sieve.h  sieve.pxd  sieve_python_wrapper.cpp  test_benchmark.py
.github/: dependabot.yml
.github/workflows/: pre-commit-autoupdate.yml  pre-commit.yml  test.yml
src/: cpython_wrapper.cpp  pyproject.toml  setup.py  sieve.pxd  test_benchmark.py
src/cpp_impl/: sieve.cpp  sieve.h
src/cython_wrapper/: sieve.pxd
tests/: test_benchmark.py
